load project experiments
