# src/api/routes/projects.js
@@ -13,9 +13,12 @@ module.exports = {
       .then((data) => res.json(data))
       .catch(next);
   },
-
   'projects#get': (req, res, next) => {
     projectsService.getProjects().then((response) => res.json(response)).catch(next);
+  },
+  'projects#getExperiments': (req, res, next) => {
+    projectsService.getExperiments(req.params.projectUuid)
+      .then((response) => res.json(response)).catch(next);
   },
 
 };
